Modificacion de las imagenes
Para que todas las imagenes quedaran del mismo tamaño.

--- a/peliculas.html
+++ b/peliculas.html
@@ -81,14 +81,14 @@
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/Prince_of_Persia_Las_arenas_del_tiempo-548877928-large.jpg" alt="Imagen representativa de la pelicula Prince of Persia">
+                <img class="img-format img-fluid" src="images/pPrince_of_Persia_Las_arenas_del_tiempo-548877928-large.jpg" alt="Imagen representativa de la pelicula Prince of Persia">
                 <div class="div-design">
                   <h3>Prince of Persia</h3>
                   <p>Todos los derechos de Disnep</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/Detective Pikachu.jpg" alt="Imagen representativa de la pelicula Detective Pikachu">
+                <img class="img-format img-fluid" src="images/pDetective Pikachu.jpg" alt="Imagen representativa de la pelicula Detective Pikachu">
                 <div class="div-design">
                   <h3>Detective Pikachu</h3>
                   <p>Todos los derechos de Warner Bros</p>
@@ -98,21 +98,21 @@
             
             <div class="row">
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/rampage.jpg" alt="Imagen representativa de la pelicula Rampage">
+                <img class="img-format img-fluid" src="images/prampage.jpg" alt="Imagen representativa de la pelicula Rampage">
                 <div class="div-design">
                   <h3>Rampage</h3>
                   <p>Todos los derechos de Warner Bros</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/hitman.jpg" alt="Imagen Representativa de la pelicula Hitman">
+                <img class="img-format img-fluid" src="images/phitman.jpg" alt="Imagen Representativa de la pelicula Hitman">
                 <div class="div-design">
                   <h3>Hitman</h3>
                   <p>Todos los derechos de Warner Bros</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/Need_For_Speed_La_Pelicula.jpg" alt="Imagen representativa de la pelicula Need for Speed">
+                <img class="img-format img-fluid" src="images/pNeed_For_Speed_La_Pelicula.jpg" alt="Imagen representativa de la pelicula Need for Speed">
                 <div class="div-design">
                   <h3>Need For Speed</h3>
                   <p>Todos los derechos de Warner Bros</p>
@@ -122,21 +122,21 @@
 
             <div class="row">
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/sonic-la-pelicula.jpg" alt="Imagen representativa de la pelicula Sonic">
+                <img class="img-format img-fluid" src="images/psonic-la-pelicula.jpg" alt="Imagen representativa de la pelicula Sonic">
                 <div class="div-design">
                   <h3>Sonic</h3>
                   <p>Todos los derechos de Warner Bros</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/warcraft.jpg" alt="Imagen representativa de la pelicula Warcraft">
+                <img class="img-format img-fluid" src="images/pwarcraft.jpg" alt="Imagen representativa de la pelicula Warcraft">
                 <div class="div-design">
                   <h3>Warcraft</h3>
                   <p>Todos los derechos de Warner Bros</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/tomb raider.jpg" alt="Imagen representativa de Tomb Raider">
+                <img class="img-format img-fluid" src="images/ptomb raider.jpg" alt="Imagen representativa de Tomb Raider">
                 <div class="div-design">
                   <h3>Tomb Raider</h3>
                   <p>Todos los derechos de Warner Bros</p>
