Se agrego el copyright a las peliculas

--- a/peliculas.html
+++ b/peliculas.html
@@ -77,7 +77,7 @@
                 <img class="img-format img-fluid" src="images/silenthill.jpg" alt="Imagen representativa de la pelicula Silent Hill">
                 <div class="div-design">
                   <h3>Silent Hill</h3>
-                  <p>Derecho de autor</p>
+                  <p>Todos los derechos de Silent Hill DCP Inc</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
@@ -91,7 +91,7 @@
                 <img class="img-format img-fluid" src="images/pDetective Pikachu.jpg" alt="Imagen representativa de la pelicula Detective Pikachu">
                 <div class="div-design">
                   <h3>Detective Pikachu</h3>
-                  <p>Todos los derechos de Warner Bros</p>
+                  <p>Todos los derechos de Nintendo</p>
                 </div>
               </div>
             </div>
@@ -108,14 +108,14 @@
                 <img class="img-format img-fluid" src="images/phitman.jpg" alt="Imagen Representativa de la pelicula Hitman">
                 <div class="div-design">
                   <h3>Hitman</h3>
-                  <p>Todos los derechos de Warner Bros</p>
+                  <p>Todos los derechos de 20th Century Fox </p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
                 <img class="img-format img-fluid" src="images/pNeed_For_Speed_La_Pelicula.jpg" alt="Imagen representativa de la pelicula Need for Speed">
                 <div class="div-design">
                   <h3>Need For Speed</h3>
-                  <p>Todos los derechos de Warner Bros</p>
+                  <p>Todos los derechos de DreamWorks Pictures</p>
                 </div>
               </div>
             </div>
@@ -125,14 +125,14 @@
                 <img class="img-format img-fluid" src="images/psonic-la-pelicula.jpg" alt="Imagen representativa de la pelicula Sonic">
                 <div class="div-design">
                   <h3>Sonic</h3>
-                  <p>Todos los derechos de Warner Bros</p>
+                  <p>Todos los derechos de SEGA</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
                 <img class="img-format img-fluid" src="images/pwarcraft.jpg" alt="Imagen representativa de la pelicula Warcraft">
                 <div class="div-design">
                   <h3>Warcraft</h3>
-                  <p>Todos los derechos de Warner Bros</p>
+                  <p>Todos los derechos de Blizzard Entertainment</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
