Asignación de los enlaces entre las paginas

--- a/artMario_hitman.html
+++ b/artMario_hitman.html
@@ -103,11 +103,11 @@
             <!--recomendacion1-->
 
             <div class=" col-sm-4">
-              <img src="images/psonic-la-pelicula.jpg" alt="Imagen de la sonic" class="img-fluid">
+              <a href="artMario_sonic.html"></a> <img src="images/psonic-la-pelicula.jpg" alt="Imagen de la sonic" class="img-fluid">
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Sonic</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_sonic.html"></a> Sonic</h3>
               <h3 ><strong>Dirección: </strong>Jeff Fowler</h4>
               <p>
                 Sonic es una película de aventuras fantásticas estadounidense-japonesa del año 2020 
@@ -123,11 +123,11 @@
           <div class="div-JuegosRecomendados row col-sm-12">
 
             <div class="col-sm-4">
-              <img src="images/tomb raider.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid">
+              <a href="artMario_tombraider.html"><img src="images/tomb raider.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid"></a> 
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Tomb Raider</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_tombraider.html"></a> Tomb Raider</h3>
               <h3 ><strong>Dirección:</strong> Roar Uthaug</h4>
               <p>
                 Tomb Raider es una película estadounidense de acción y aventuras de 2018 dirigida por Roar Uthaug 
@@ -143,11 +143,11 @@
             <div class="div-JuegosRecomendados row col-sm-12">
 
               <div class="col-sm-4">
-                <img src="images/pPrince_of_Persia_Las_arenas_del_tiempo-548877928-large.jpg" alt="imagen de la pelicula Principe de Persia" class="img-fluid">
+                <a href="artMario_princeofpersia.html"><img src="images/pPrince_of_Persia_Las_arenas_del_tiempo-548877928-large.jpg" alt="imagen de la pelicula Principe de Persia" class="img-fluid"></a>
               </div>
   
               <div class="Content-JuegoRecomendado col-sm-8">
-                <h2 class=" text-center">Principe de Persia</h3>
+                <h2 class=" text-center"><a id="link" href="artMario_princeofpersia.html"></a> Principe de Persia</h3>
                 <h3 ><strong>Dirección:</strong> Mike Newell</h4>
                 <p>
                   La película está basada en el videojuego de 2003, Prince of Persia: Las Arenas del Tiempo, 
