--- a/artMario_silenthill.html
+++ b/artMario_silenthill.html
@@ -102,11 +102,11 @@
             <!--recomendacion1-->
 
             <div class=" col-sm-4">
-              <img src="images/rampage.jpg" alt="Imagen de la pelicula rampage" class="img-fluid">
+              <a href="artMario_rampage.htm"><img src="images/rampage.jpg" alt="Imagen de la pelicula rampage" class="img-fluid"></a>
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Rampage</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_rampage.html"></a> Rampage</h3>
               <h3 ><strong>Dirección: </strong>Brad Peyton</h4>
               <p>
                 Rampage (titulada Rampage: Devastación en Hispanoamérica y Proyecto Rampage en España) es una película de acción,
@@ -122,11 +122,11 @@
           <div class="div-JuegosRecomendados row col-sm-12">
 
             <div class="col-sm-4">
-              <img src="images/tomb raider.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid">
+              <a href="artMario_tombraider.html"><img src="images/tomb raider.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid"></a>
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Tomb Raider</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_tombraider.html"></a> Tomb Raider</h3>
               <h3 ><strong>Dirección:</strong> Roar Uthaug</h4>
               <p>
                 Tomb Raider es una película estadounidense de acción y aventuras de 2018 dirigida por Roar Uthaug 
@@ -142,11 +142,11 @@
             <div class="div-JuegosRecomendados row col-sm-12">
 
               <div class="col-sm-4">
-                <img src="images/warcraft.jpg" alt="imagen de la pelicula warcraft" class="img-fluid">
+                <a href="artMario_warcraft.html"><img src="images/warcraft.jpg" alt="imagen de la pelicula warcraft" class="img-fluid"></a>
               </div>
   
               <div class="Content-JuegoRecomendado col-sm-8">
-                <h2 class=" text-center">Warcraft</h3>
+                <h2 class=" text-center"><a id="link" href="artMario_warcraft.html"></a> Warcraft</h3>
                 <h3 ><strong>Dirección:</strong> 	Duncan Jones</h4>
                 <p>
                   Warcraft (titulada Warcraft: el origen en España y Warcraft: el primer encuentro de dos mundos en algunas partes de Hispanoamérica)
