--- a/artMario_tombraider.html
+++ b/artMario_tombraider.html
@@ -102,11 +102,11 @@
             <!--recomendacion1-->
 
             <div class=" col-sm-4">
-              <img src="images/rampage.jpg" alt="Imagen de la pelicula rampage" class="img-fluid">
+              <a href="artMario_rampage.html"><img src="images/rampage.jpg" alt="Imagen de la pelicula rampage" class="img-fluid"></a>
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Rampage</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_rampage.html"></a> Rampage</h3>
               <h3 ><strong>Dirección: </strong>Brad Peyton</h4>
               <p>
                 Rampage (titulada Rampage: Devastación en Hispanoamérica y Proyecto Rampage en España) es una película de acción,
@@ -122,11 +122,11 @@
           <div class="div-JuegosRecomendados row col-sm-12">
 
             <div class="col-sm-4">
-              <img src="images/phitman.jpg.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid">
+              <a href="artMario_hitman.html"><img src="images/phitman.jpg.jpg" alt="imagen de la pelicula Hitman" class="img-fluid"></a>
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Hitman</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_hitman.html"></a> Hitman</h3>
               <h3 ><strong>Dirección:</strong> Xavier Gens</h4>
               <p>
                 Hitman es una película de acción del 2007, adaptada de la serie de videojuegos Hitman.
@@ -141,11 +141,11 @@
             <div class="div-JuegosRecomendados row col-sm-12">
 
               <div class="col-sm-4">
-                <img src="images/pNeed_For_Speed_La_Pelicula.jpg" alt="imagen de la pelicula Need for Speed" class="img-fluid">
+                <a href="artMario_needforspeed.html"><img src="images/pNeed_For_Speed_La_Pelicula.jpg" alt="imagen de la pelicula Need for Speed" class="img-fluid"></a>
               </div>
   
               <div class="Content-JuegoRecomendado col-sm-8">
-                <h2 class=" text-center">Need for Speed</h3>
+                <h2 class=" text-center"><a id="link" href="artMario_needforspeed.html"></a> Need for Speed</h3>
                 <h3 ><strong>Dirección:</strong> 	Scott Waugh</h4>
                 <p>
                   Need for Speed es una película de acción, dirigida por Scott Waugh y escrita por John Gatins y George Gatins. 
