--- a/peliculas.html
+++ b/peliculas.html
@@ -74,47 +74,53 @@
               
             <div class="row">
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/silenthill.jpg" alt="Imagen representativa de la pelicula Silent Hill">
+                <a href="artMario_silenthill.html"><img class="img-format img-fluid" src="images/silenthill.jpg" alt="Imagen representativa de la pelicula Silent Hill"></a>
                 <div class="div-design">
-                  <h3>Silent Hill</h3>
+                  <h3 ><a id="link"  href="artMario_silenthill.html">Silent Hill</a></h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
                   <p>Todos los derechos de Silent Hill DCP Inc</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/pPrince_of_Persia_Las_arenas_del_tiempo-548877928-large.jpg" alt="Imagen representativa de la pelicula Prince of Persia">
+                <a href="artMario_princeofpersia.html"><img class="img-format img-fluid" src="images/pPrince_of_Persia_Las_arenas_del_tiempo-548877928-large.jpg" alt="Imagen representativa de la pelicula Prince of Persia"></a>
                 <div class="div-design">
-                  <h3>Prince of Persia</h3>
+                  <h3><a href="artMario_princeofpersia.html" id="link">Prince of Persia</a></h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
                   <p>Todos los derechos de Disnep</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/pDetective Pikachu.jpg" alt="Imagen representativa de la pelicula Detective Pikachu">
+                <a href="artMario_detectivepikachu.html"><img class="img-format img-fluid" src="images/pDetective Pikachu.jpg" alt="Imagen representativa de la pelicula Detective Pikachu"></a>
                 <div class="div-design">
-                  <h3>Detective Pikachu</h3>
-                  <p>Todos los derechos de Nintendo</p>
+                  <h3><a href="artMario_detectivepikachu.html" id="link">Detective Pikachu</a></h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
+                  <p>Todos los derechos de The Pokémon Company</p>
                 </div>
               </div>
             </div>
             
             <div class="row">
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/prampage.jpg" alt="Imagen representativa de la pelicula Rampage">
+                <a href="artMario_rampage.html"><img class="img-format img-fluid" src="images/prampage.jpg" alt="Imagen representativa de la pelicula Rampage"></a>
                 <div class="div-design">
-                  <h3>Rampage</h3>
+                  <h3><a href="artMario_rampage.html" id="link">Rampage</a> </h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
                   <p>Todos los derechos de Warner Bros</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/phitman.jpg" alt="Imagen Representativa de la pelicula Hitman">
+                <a href="artMario_hitman.html"><img class="img-format img-fluid" src="images/phitman.jpg" alt="Imagen Representativa de la pelicula Hitman"></a>
                 <div class="div-design">
-                  <h3>Hitman</h3>
+                  <h3><a href="artMario_hitman.html" id="link">Hitman</a></h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
                   <p>Todos los derechos de 20th Century Fox </p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/pNeed_For_Speed_La_Pelicula.jpg" alt="Imagen representativa de la pelicula Need for Speed">
+                <a href="artMario_needforspeed.html "><img class="img-format img-fluid" src="images/pNeed_For_Speed_La_Pelicula.jpg" alt="Imagen representativa de la pelicula Need for Speed"></a>
                 <div class="div-design">
-                  <h3>Need For Speed</h3>
+                  <h3><a href="artMario_needforspeed.html " id="link">Need For Speed</a></h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
                   <p>Todos los derechos de DreamWorks Pictures</p>
                 </div>
               </div>
@@ -122,23 +128,26 @@
 
             <div class="row">
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/psonic-la-pelicula.jpg" alt="Imagen representativa de la pelicula Sonic">
+                <a href="artMario_sonic.html"><img class="img-format img-fluid" src="images/psonic-la-pelicula.jpg" alt="Imagen representativa de la pelicula Sonic"></a>
                 <div class="div-design">
-                  <h3>Sonic</h3>
+                  <h3><a href="artMario_sonic.html" id="link">Sonic</a></h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
                   <p>Todos los derechos de SEGA</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/pwarcraft.jpg" alt="Imagen representativa de la pelicula Warcraft">
+                <a href="artMario_warcraft.html"><img class="img-format img-fluid" src="images/pwarcraft.jpg" alt="Imagen representativa de la pelicula Warcraft"></a>
                 <div class="div-design">
-                  <h3>Warcraft</h3>
+                  <h3><a href="artMario_warcraft.html" id="link">Warcraft</a></h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
                   <p>Todos los derechos de Blizzard Entertainment</p>
                 </div>
               </div>
               <div class="col-sm contanedorm">
-                <img class="img-format img-fluid" src="images/ptomb raider.jpg" alt="Imagen representativa de Tomb Raider">
+                <a href="artMario_tombraider.html"><img class="img-format img-fluid" src="images/ptomb raider.jpg" alt="Imagen representativa de Tomb Raider"></a>
                 <div class="div-design">
-                  <h3>Tomb Raider</h3>
+                  <h3><a href="artMario_tombraider.html" id="link">Raider</a> </h3>
+                  <!--MODIFICACION DE LOS DERECHOS DE AUTOR-->
                   <p>Todos los derechos de Warner Bros</p>
                 </div>
               </div>
