--- a/artMario_detectivepikachu.html
+++ b/artMario_detectivepikachu.html
@@ -104,11 +104,11 @@
             <!--recomendacion1-->
 
             <div class=" col-sm-4">
-              <img src="images/psonic-la-pelicula.jpg" alt="Imagen de la sonic" class="img-fluid">
+              <a href="artMario_rampage.html"><img src="images/psonic-la-pelicula.jpg" alt="Imagen de la sonic" class="img-fluid"></a> 
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Rampage</h3>
+              <h2 class=" text-center"><a id="link"  href="artMario_sonic.html"></a>Sonic</h3>
               <h3 ><strong>Dirección: </strong>Jeff Fowler</h4>
               <p>
                 Sonic es una película de aventuras fantásticas estadounidense-japonesa del año 2020 
@@ -124,11 +124,11 @@
           <div class="div-JuegosRecomendados row col-sm-12">
 
             <div class="col-sm-4">
-              <img src="images/tomb raider.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid">
+              <a href="artMario_tombraider.html"><img src="images/tomb raider.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid"></a> 
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Tomb Raider</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_tombraider.html"></a> Tomb Raider</h3>
               <h3 ><strong>Dirección:</strong> Roar Uthaug</h4>
               <p>
                 Tomb Raider es una película estadounidense de acción y aventuras de 2018 dirigida por Roar Uthaug 
@@ -144,11 +144,11 @@
             <div class="div-JuegosRecomendados row col-sm-12">
 
               <div class="col-sm-4">
-                <img src="images/warcraft.jpg" alt="imagen de la pelicula warcraft" class="img-fluid">
+                <a href="artMario_warcraft.html"><img src="images/warcraft.jpg" alt="imagen de la pelicula warcraft" class="img-fluid"></a> 
               </div>
   
               <div class="Content-JuegoRecomendado col-sm-8">
-                <h2 class=" text-center">Warcraft</h3>
+                <h2 class=" text-center"><a id="link" href="artMario_warcraft.html"></a> Warcraft</h3>
                 <h3 ><strong>Dirección:</strong> 	Duncan Jones</h4>
                 <p>
                   Warcraft (titulada Warcraft: el origen en España y Warcraft: el primer encuentro de dos mundos en algunas partes de Hispanoamérica)
