--- a/artMario_warcraft.html
+++ b/artMario_warcraft.html
@@ -103,11 +103,11 @@
             <!--recomendacion1-->
 
             <div class=" col-sm-4">
-              <img src="images/rampage.jpg" alt="Imagen de la pelicula rampage" class="img-fluid">
+              <a href="artMario_rampage.html"><img src="images/rampage.jpg" alt="Imagen de la pelicula rampage" class="img-fluid"></a>
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Rampage</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_rampage.html"></a> Rampage</h3>
               <h3 ><strong>Dirección: </strong>Brad Peyton</h4>
               <p>
                 Rampage (titulada Rampage: Devastación en Hispanoamérica y Proyecto Rampage en España) es una película de acción,
@@ -123,11 +123,11 @@
           <div class="div-JuegosRecomendados row col-sm-12">
 
             <div class="col-sm-4">
-              <img src="images/tomb raider.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid">
+              <a href="artMario_tombraider.html"><img src="images/tomb raider.jpg" alt="imagen de la pelicula Tomb Raider" class="img-fluid"></a>
             </div>
 
             <div class="Content-JuegoRecomendado col-sm-8">
-              <h2 class=" text-center">Tomb Raider</h3>
+              <h2 class=" text-center"><a id="link" href="artMario_tombraider.html"></a> Tomb Raider</h3>
               <h3 ><strong>Dirección:</strong> Roar Uthaug</h4>
               <p>
                 Tomb Raider es una película estadounidense de acción y aventuras de 2018 dirigida por Roar Uthaug 
@@ -143,11 +143,11 @@
             <div class="div-JuegosRecomendados row col-sm-12">
 
               <div class="col-sm-4">
-                <img src="images/pNeed_For_Speed_La_Pelicula.jpg" alt="imagen de la pelicula Need for Speed" class="img-fluid">
+                <a href="artMario_needforspeed.html"><img src="images/pNeed_For_Speed_La_Pelicula.jpg" alt="imagen de la pelicula Need for Speed" class="img-fluid"></a>
               </div>
   
               <div class="Content-JuegoRecomendado col-sm-8">
-                <h2 class=" text-center">Need for Speed</h3>
+                <h2 class=" text-center"><a id="link" href="artMario_needforspeed.html"></a> Need for Speed</h3>
                 <h3 ><strong>Dirección:</strong> 	Scott Waugh</h4>
                 <p>
                   Need for Speed es una película de acción, dirigida por Scott Waugh y escrita por John Gatins y George Gatins. 
